--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,13 @@
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <script data-main="js/main.js" src="js/libs/require.js"></script>
+     <script data-main="js/app" src="js/libs/require.js"></script>
 
    </head>
  
    <body>
 
+      HELLO
       <div id="main" class="container"></div>
 
    </body>
