--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <script data-main="js/app" src="js/libs/require.js"></script>
+     <script data-main="js/app" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.16/require.min.js"></script>
 
    </head>
  
