Join template added

--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,7 @@
    </head>
  
    <body>
-
-      HELLO
-      <div id="main" class="container"></div>
-
+      <h1> 4 in a row game </h1>
+      <div class="page"></div>
    </body>
 </html>
